image added and modified

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h3>Hii I am Keshav Choudhari.</h3>
 <button>Click here to know more...</button>
 <h3>hii welcome here</h3>
-
+<img src="keshav.jpeg" alt="keshavimage">
 
 
 </div>
