--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <button>Click here to know more...</button>
 <h3>hii welcome here</h3>
 <img src="keshav.jpeg" alt="keshavimage">
+<label>Enter you name</label>
+<input type="text" placeholder="please enter your name">
 
 
 </div>
